--- a/screenconky.cfg
+++ b/screenconky.cfg
@@ -63,7 +63,7 @@ ${color 918BA7}${font Open Sans Light:pixelsize=80}${alignc}${time %H:%M}${font}
 ${font Open Sans Light:pixelsize=40}${alignc}${time %d.%m.%Y}${font}
 ${font Open Sans Light:pixelsize=14}
 $hr
-${if_empty ${if_smapi_bat_installed 0}}Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 40,210 BAT1} ${endif}
+${if_existing /sys/class/power_supply/BAT1}Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 40,210 BAT1} ${endif}
 Swap Usage: $swap/$swapmax - $swapperc% ${alignr}${swapbar 8,210}
 RAM Usage: $mem/$memmax - $memperc% ${alignr}${memgraph 40,210}
 CPU Usage: $cpu% ${alignr}${cpugraph 40,210}
