update i3block battery script

--- a/screenconky.cfg
+++ b/screenconky.cfg
@@ -79,6 +79,12 @@ Networking:
  Down: ${downspeed wlp0s20f3} ${alignr}${downspeedgraph wlp0s20f3 40,210 77507B 5C3566}
  Total: ${totaldown wlp0s20f3}
  Signal: ${wireless_link_qual_perc wlp0s20f3}${alignr}${wireless_link_bar 40,210 wlp0s20f3}
+${endif}${if_up enp6s0}$hr
+Networking:
+ Up: ${upspeed enp6s0} ${alignr}${upspeedgraph enp6s0 40,210 77507B 5C3566}
+ Total: ${totalup enp6s0}
+ Down: ${downspeed enp6s0} ${alignr}${downspeedgraph enp6s0 40,210 77507B 5C3566}
+ Total: ${totaldown enp6s0}
 ${endif}
 TOP PROCESSES 
 Name $alignr PID   CPU%   MEM%
