--- a/config
+++ b/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+exec --no-startup-id feh --bg-fill ~/.config/i3/background.png
 exec --no-startup-id picom -CGb
 
 # Font for window titles. Will also be used by the bar unless a different font
