--- a/configs/block.cfg
+++ b/configs/block.cfg
@@ -10,7 +10,7 @@ interval=300
 color=#91E78B
 
 [battery]
-command=~/.config/i3/battery.sh
+command=~/.config/i3/scripts/battery.sh
 interval=10
 
 # Update time every 5 seconds
@@ -19,5 +19,5 @@ command=date +%T
 interval=1
 
 [layout]
-command=~/.config/i3/curlayout.sh
+command=~/.config/i3/scripts/curlayout.sh
 interval=1
