--- a/configs/lockconky.cfg
+++ b/configs/lockconky.cfg
@@ -62,7 +62,7 @@ ${font Open Sans Light:pixelsize=80}${alignc}${time %H:%M}${font}
 ${font Open Sans Light:pixelsize=40}${alignc}${time %d.%m.%Y}${font}
 ${font Open Sans Light:pixelsize=14}
 $hr
-Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 8,210 BAT1}
+${if_existing /sys/class/power_supply/BAT1}Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 40,210 BAT1} ${endif}
 RAM Usage: $mem/$memmax - $memperc% ${alignr}${membar 8,210}
 Swap Usage: $swap/$swapmax - $swapperc% ${alignr}${swapbar 8,210}
 CPU Usage: $cpu% ${alignr}${cpubar 8,210}
@@ -73,11 +73,17 @@ File systems:
  /var ${fs_used /var}/${fs_size /var} ${alignr}${fs_bar 8,210 /var}
 ${if_up wlp0s20f3}$hr
 Networking:
- Up: ${upspeed wlp0s20f3} ${alignr}${upspeedgraph wlp0s20f3 20,210 77507B 5C3566}
+${if_up wlp0s20f3}$hr
+ Up: ${upspeed wlp0s20f3} ${alignr}${upspeedgraph wlp0s20f3 40,210 77507B 5C3566}
  Total: ${totalup wlp0s20f3}
- Down: ${downspeed wlp0s20f3} ${alignr}${downspeedgraph wlp0s20f3 20,210 77507B 5C3566}
+ Down: ${downspeed wlp0s20f3} ${alignr}${downspeedgraph wlp0s20f3 40,210 77507B 5C3566}
  Total: ${totaldown wlp0s20f3}
- Signal: ${wireless_link_qual_perc wlp0s20f3}${alignr}${wireless_link_bar 20,210 wlp0s20f3}
-${endif}${font Open Sans Light:pixelsize=80}${alignc}${exec ~/.config/i3/curlayout.sh}
+ Signal: ${wireless_link_qual_perc wlp0s20f3}${alignr}${wireless_link_bar 40,210 wlp0s20f3}
+${endif}${if_up enp6s0}$hr
+ Up: ${upspeed enp6s0} ${alignr}${upspeedgraph enp6s0 40,210 77507B 5C3566}
+ Total: ${totalup enp6s0}
+ Down: ${downspeed enp6s0} ${alignr}${downspeedgraph enp6s0 40,210 77507B 5C3566}
+ Total: ${totaldown enp6s0}
+${endif}${font Open Sans Light:pixelsize=80}${alignc}${exec ~/.config/i3/scripts/curlayout.sh}
 
 ]]
