--- a/config
+++ b/config
@@ -10,10 +10,10 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-exec --no-startup-id setxkbmap -layout us,ru
-exec --no-startup-id setxkbmap -option grp:caps_toggle 'us,ru' -option grp_led:caps
-exec --no-startup-id feh --bg-fill ~/.config/i3/static/background.png
-exec --no-startup-id picom -CGb
+exec --no-startup-id "setxkbmap -layout us,ru"
+exec --no-startup-id "setxkbmap -option grp:caps_toggle 'us,ru' -option grp_led:caps"
+exec --no-startup-id "feh --bg-fill ~/.config/i3/static/background.png"
+exec --no-startup-id "picom -CGb"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -28,8 +28,8 @@ font pango:monospace 8
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-bindsym $mod+l exec "i3lock -i ~/.config/i3/static/background.png ; conky -c ~/.config/i3/configs/ockconky.cfg -w $(xwininfo -name i3lock | awk '/xwininfo/ {print $4}')"
+exec --no-startup-id xss-lock --transfer-sleep-lock -- ~/.config/i3/scripts/lock.sh
+bindsym $mod+l exec "~/.config/i3/scripts/lock.sh"
 
 
 
@@ -47,6 +47,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 bindsym XF86Calculator exec --no-startup-id cantor
 bindsym Print exec ~/.config/i3/scripts/screenshots.sh
+bindsym Mod1+Shift+s exec ~/.config/i3/scripts/screenshots.sh
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
