--- a/configs/screenconky.cfg
+++ b/configs/screenconky.cfg
@@ -59,43 +59,56 @@ conky.config = {
 }
 
 conky.text = [[
-${color 918BA7}${font Open Sans Light:pixelsize=80}${alignc}${time %H:%M}${font}
-${font Open Sans Light:pixelsize=40}${alignc}${time %d.%m.%Y}${font}
+${color 918BA7}${font Open Sans Light:pixelsize=60}${alignc}${time %H:%M}${font}
+${font Open Sans Light:pixelsize=30}${alignc}${time %d.%m.%Y}${font}
 ${font Open Sans Light:pixelsize=14}
 $hr
-${if_existing /sys/class/power_supply/BAT1}Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 40,210 BAT1} ${endif}
-Swap Usage: $swap/$swapmax - $swapperc% ${alignr}${swapbar 8,210}
-RAM Usage: $mem/$memmax - $memperc% ${alignr}${memgraph 40,210}
-CPU Usage: $cpu% ${alignr}${cpugraph 40,210}
+${if_existing /sys/class/power_supply/BAT1}Battery: ${battery_percent BAT1}% ${alignr}${battery_bar 40,180 BAT1} ${endif}
+Swap: $swap/$swapmax $swapperc% ${alignr}${swapbar 8,180}
+
+${voffset 5}RAM: $mem/$memmax $memperc% 
+${voffset -30}${alignr}${memgraph 30,180 77507B 5C3566}
+
+${voffset 5}CPU: $cpu% 
+${voffset -30}${alignr}${cpugraph 30,180 77507B 5C3566}
+${if_existing /sys/devices/platform/coretemp.0/hwmon/hwmon3/temp7_input}CPU0    ${cpu 0}% Temp: ${hwmon 3 temp 1}°C ${alignr}${cpubar 8,180 cpu0}
+CPU1    ${cpu 1}% Temp: ${hwmon 3 temp 1}°C ${alignr}${cpubar 8,180 cpu1}
+CPU2    ${cpu 2}% Temp: ${hwmon 3 temp 2}°C ${alignr}${cpubar 8,180 cpu2}
+CPU3    ${cpu 3}% Temp: ${hwmon 3 temp 2}°C ${alignr}${cpubar 8,180 cpu1}
+CPU4    ${cpu 4}% Temp: ${hwmon 3 temp 3}°C ${alignr}${cpubar 8,180 cpu4}
+CPU5    ${cpu 5}% Temp: ${hwmon 3 temp 3}°C ${alignr}${cpubar 8,180 cpu5}
+CPU6    ${cpu 6}% Temp: ${hwmon 3 temp 4}°C ${alignr}${cpubar 8,180 cpu6}
+CPU7    ${cpu 7}% Temp: ${hwmon 3 temp 4}°C ${alignr}${cpubar 8,180 cpu7}
+CPU8    ${cpu 8}% Temp: ${hwmon 3 temp 5}°C ${alignr}${cpubar 8,180 cpu8}
+CPU9    ${cpu 9}% Temp: ${hwmon 3 temp 5}°C ${alignr}${cpubar 8,180 cpu9}
+CPU10  ${cpu 10}% Temp: ${hwmon 3 temp 6}°C ${alignr}${cpubar 8,180 cpu10}
+CPU11  ${cpu 11}% Temp: ${hwmon 3 temp 6}°C ${alignr}${cpubar 8,180 cpu11}${endif}
+
+${if_existing /proc/driver/nvidia}GPU:     ${nvidia temp}°C${endif}${hwmon 3 fan 0}
 $hr
 File systems:
- / ${fs_used /}/${fs_size /} ${alignr}${fs_bar 8,210 /}
- /home ${fs_used /home}/${fs_size /home} ${alignr}${fs_bar 8,210 /home}
- /var ${fs_used /var}/${fs_size /var} ${alignr}${fs_bar 8,210 /var}
-${if_up wlp0s20f3}$hr
-Networking:
- Up: ${upspeed wlp0s20f3} ${alignr}${upspeedgraph wlp0s20f3 40,210 77507B 5C3566}
- Total: ${totalup wlp0s20f3}
- Down: ${downspeed wlp0s20f3} ${alignr}${downspeedgraph wlp0s20f3 40,210 77507B 5C3566}
- Total: ${totaldown wlp0s20f3}
- Signal: ${wireless_link_qual_perc wlp0s20f3}${alignr}${wireless_link_bar 40,210 wlp0s20f3}
-${endif}${if_up enp6s0}$hr
-Networking:
- Up: ${upspeed enp6s0} ${alignr}${upspeedgraph enp6s0 40,210 77507B 5C3566}
- Total: ${totalup enp6s0}
- Down: ${downspeed enp6s0} ${alignr}${downspeedgraph enp6s0 40,210 77507B 5C3566}
- Total: ${totaldown enp6s0}
-${endif}
-TOP PROCESSES 
-Name $alignr PID   CPU%   MEM%
-${top name 1} $alignr ${top pid 1} ${top cpu 1}% ${top mem 1}%
-${top name 2} $alignr ${top pid 2} ${top cpu 2}% ${top mem 2}%
-${top name 3} $alignr ${top pid 3} ${top cpu 3}% ${top mem 3}%
-${top name 4} $alignr ${top pid 4} ${top cpu 4}% ${top mem 4}%
-${top name 5} $alignr ${top pid 5} ${top cpu 5}% ${top mem 5}%
-${top name 6} $alignr ${top pid 6} ${top cpu 6}% ${top mem 6}%
-${top name 7} $alignr ${top pid 7} ${top cpu 7}% ${top mem 7}%
-${top name 8} $alignr ${top pid 8} ${top cpu 8}% ${top mem 8}%
-${top name 9} $alignr ${top pid 9} ${top cpu 9}% ${top mem 9}%
+ / ${fs_used /}/${fs_size /} ${alignr}${fs_bar 8,180 /}
+ /home ${fs_used /home}/${fs_size /home} ${alignr}${fs_bar 8,180 /home}
+ /var ${fs_used /var}/${fs_size /var} ${alignr}${fs_bar 8,180 /var}
+ ${if_existing /dev/sda}sda: ${hddtemp /dev/sda}°C${endif}
+ ${if_existing /dev/sdb}sdb: ${hddtemp /dev/sdb}°C${endif}
+$hr
+${if_up wlp0s20f3}${alignc}WiFi:
 
+ Up: ${upspeed wlp0s20f3} ${alignr}${upspeedgraph wlp0s20f3 30,180 77507B 5C3566}
+ Total: ${totalup wlp0s20f3}
+ Down: ${downspeed wlp0s20f3} ${alignr}${downspeedgraph wlp0s20f3 30,180 77507B 5C3566}
+ Total: ${totaldown wlp0s20f3}
+ Signal: ${wireless_link_qual_perc wlp0s20f3}${alignr}${wireless_link_bar 40,180 wlp0s20f3}
+ $hr${endif}${if_up enp6s0}${alignc}Eth:
+
+ ${voffset 5}Up: ${upspeed enp6s0} 
+ ${voffset -40}${alignr}${upspeedgraph enp6s0 40,180 77507B 5C3566}
+ ${alignc}Total: ${totalup enp6s0}
+
+ ${voffset 5}Down: ${downspeed enp6s0} 
+ ${voffset -40}${alignr}${downspeedgraph enp6s0 40,180 77507B 5C3566}
+ ${alignc}Total: ${totaldown enp6s0}
+$hr${endif}
 ]]
+
